--- a/projekt3/index.html
+++ b/projekt3/index.html
@@ -7,7 +7,25 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <link rel="stylesheet" href="style.css">
 </head>
+<div class="music-player-panel">
+  <p>Music</p>
+  <button class="music-toggle-btn">
+    <span class="material-symbols-outlined">music_note</span>
+  </button>
+</div>
+
+<audio id="background-music" loop>
+  <source src="music.mp3" type="audio/mp3">
+</audio>
 <body>
+  <div class="last-result-banner">
+    <p class="last-result-text">Last Game</p>
+    <button class="erase-result-btn">Erase Previous Game</button>
+  </div>
+  <div class="highscores-banner">
+    <p class="highscores-title">Leaderboard</p>
+    <ul class="highscores-list"></ul>
+  </div>
   <!-- Containers config-->
   <div class="config-container">
     <h2 class="config-title">Game Settings</h2>
@@ -15,18 +33,18 @@
     <div class="config-option">
       <h4 class="option-title">Select Category</h4>
       <div class="category-options">
-        <button class="category-option active">Math Tests</button>
-        <button class="category-option">Programming Languages</button>
+        <button class="category-option">Nimetav, Omastav, Osastav</button>
+        <button class="category-option active">Sõnad</button>
         <button class="category-option">Eesti Kääned</button>
-        <button class="category-option">Entertainment</button>
+        <button class="category-option">Numbrid</button>
       </div>
     </div>
 
     <div class="config-option">
       <h4 class="option-title">No. of Questions</h4>
       <div class="question-options">
-        <button class="question-option">5</button>
-        <button class="question-option active">10</button>
+        <button class="question-option active">5</button>
+        <button class="question-option">10</button>
         <button class="question-option">15</button>
         <button class="question-option">20</button>
         <button class="question-option">25</button>
@@ -48,30 +66,29 @@
     </header>
 
     <div class="quiz-content">
-      <h1 class="quiz-question">How do create a function in JavaScript?</h1>
-      <ul class="answer-options">
-        <li class="answer-option">
-          <p>create myFunction()</p>
-        </li>
-        <li class="answer-option">
-          <p>function myFunction()</p>
-        </li>
-        <li class="answer-option">
-          <p>def function myFunction()</p>
-        </li>
-        <li class="answer-option">
-          <p>func myFunction()</p>
-        </li>
-      </ul>
+      <h1 class="quiz-question"></h1>
+      <ul class="answer-options"></ul>
     </div>
 
     <div class="quiz-footer">
-      <p class="question-status"><b>2</b> of <b>10</b> Questions</p>
+      <p class="question-status"></p>
       <button class="next-question-btn">
         NEXT 
         <span class="material-symbols-outlined">arrow_right_alt</span>
       </button>
     </div>
   </div>
+
+  <!-- result-->
+  <div class="result-container">
+    <img src="quiz-over.png" class="result-img">
+    <h2 class="result-title">Quiz Completed Successfully!</h2>
+    <p class="result-message"></p>
+    <button class="try-again-btn">Try Again</button>
+  </div>
+
+  <script src="js/questions.js"></script>
+  <script src="js/script.js"></script>
+  
 </body> 
 </html>
